--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-  "name": "my-test2",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.4",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-color": "^2.18.0",
-    "react-date-range": "^1.0.3",
-    "react-dom": "^16.13.0",
-    "react-draggable": "^4.2.0",
-    "react-pdf": "^4.1.0",
-    "react-scripts": "3.4.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-icon": "^2.3.3",
-    "semantic-ui-react": "^0.88.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "my-test2",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https://ah-meisami.github.com/monster-rolodex",
+	"dependencies": {
+		"@material-ui/core": "^4.9.4",
+		"@material-ui/icons": "^4.9.1",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.4.1",
+		"@testing-library/user-event": "^7.2.1",
+		"bootstrap": "^4.4.1",
+		"react": "^16.13.0",
+		"react-bootstrap": "^1.0.0-beta.17",
+		"react-color": "^2.18.0",
+		"react-date-range": "^1.0.3",
+		"react-dom": "^16.13.0",
+		"react-draggable": "^4.2.0",
+		"react-pdf": "^4.1.0",
+		"react-scripts": "3.4.0",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-icon": "^2.3.3",
+		"semantic-ui-react": "^0.88.2"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"gh-pages": "^2.2.0"
+	}
 }
